--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <i class="ri-mail-line mail"></i>
         </span>
         <span>
-          <img src="logo.png" alt="" width="30px" />
+          <img src="logo.webp" alt="" width="30px" />
         </span>
       </ul>
     </nav>
@@ -193,10 +193,10 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <img src="working-girl.png" alt="" class="images" />
+            <img src="working-girl.webp" alt="" class="images" />
           </div>
           <div class="col-md-4">
-            <img src="list.png" alt="" class="images" />
+            <img src="list.webp" alt="" class="images" />
           </div>
           <div class="col-md-4">
             <div class="progress-tracker">
